tests/negative/parser/bar-expr.orng
fn main() -> ()
    case
    | false =>  4
    |  => let x = 4
    0